--- a/send.html
+++ b/send.html
@@ -13,7 +13,7 @@
         <h1>Post a Message</h2>
         <form class="msg-form" action="/chatroom?id=cyf" method="POST">
           <input class="form-control" type="text" name="message" placeholder="message..." required><br>
-          <input class="btn btn-lg btn-primary" type="submit" value="Submit via standard HTTP POST">
+          <input class="btn btn-lg btn-primary" type="submit" value="Submit via standard html form POST">
           <button class="btn btn-lg btn-success say-button">Submit with AJAX POST</button>
         </form>
         <h3 class="text-box"></h3>
